--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,7 +1,4 @@
-
-db.connection.name=HRM Connection
-db.method=Standard
-db.host=3.239.253.255
-db.port=3306
-db.username=syntax_hrm
-db.password=syntaxhrm123
+userName = admin
+password = Hum@nhrm123
+url = http://hrm.syntaxtechs.net/humanresources/symfony/web/index.php/auth/login
+browser = Chrome
